Criamos uma exceção, método POST. E incrementamos nossa entidade Carro.

--- a/doZero/src/main/resources/application.properties
+++ b/doZero/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-server.port=9091
+spring.datasource.url=jdbc:h2:~/dozerodaniel
+spring.datasource.username=sa
+spring.datasource.password=
 
+spring.jpa.generate-ddl=true
+
+server.port=9091
